# claude-code

./: .gitignore  CLAUDE.MD  CLAUDE.md  README.md  babymoon_spa_hotels_feb2026.md  hk_buy_vs_rent.py
backgammon-llm-benchmark/: .gitignore  CANARY.md  DATA_LICENSE  LICENSE  PLAN.md  README.md  pyproject.toml
backgammon-llm-benchmark/bgcore/: __init__.py  board.py  moves.py  notation.py
backgammon-llm-benchmark/data/blocklist/: README.md
backgammon-llm-benchmark/data/manifests/: README.md  pilot.json
backgammon-llm-benchmark/docs/: CONTAMINATION.md  DATASET.md  HARNESS.md  SCORING.md
backgammon-llm-benchmark/generate/: __init__.py  contamination.py  dedup.py  gnubg.py  quality.py  records.py  sample.py  selfplay.py  tiering.py
backgammon-llm-benchmark/harness/: __init__.py  cache.py  client.py  cost.py  parse.py  prompts.py  report.py  runner.py  scoring.py
backgammon-llm-benchmark/ids/: __init__.py  gnubg_id.py  xgid.py
backgammon-llm-benchmark/positions/dev/: README.md
backgammon-llm-benchmark/positions/heldout/: README.md  hashes.json
backgammon-llm-benchmark/positions/pilot/: README.md  bg-043798701b2bc201.json  bg-06f2f715c60a3064.json  bg-095f362309a64c58.json  bg-0b631cbdc69540f4.json  bg-0d3cf1acba7e656d.json  bg-0e052ae06a7d00e2.json  bg-131d29368bee6993.json  bg-13f973b4d89da36d.json  bg-24cca9422391fa48.json  bg-25ccef15ce16c177.json  bg-2dff31791e5c29a8.json  bg-2fabbf4436694e71.json  bg-3053d01ffbc44a9e.json  bg-3aa64a8ea6d1a527.json  bg-3ecb9f4d16bf0bd6.json  bg-3f3507e03cbcb1a6.json  bg-408eda749ec6a30e.json  bg-41d7b149a6f87b04.json  bg-4474e236bf67b9b0.json  bg-4c835c06e592af90.json  bg-6211351d8ca6977d.json  bg-63a7acc0c85ef2d7.json  bg-644dd2952d1a7f5e.json  bg-6865544bd8ef793b.json  bg-6aa50863df140c18.json  bg-77105a01ad87534f.json  bg-88e9c81dbf0552be.json  bg-8922c31a8dd2a9db.json  bg-8ec924255f29ae73.json  bg-9423b1c70791ca62.json  bg-9bbac59a9f950ce5.json  bg-9f1a5503876a7b1c.json  bg-a7e6e1d0c065eb5c.json  bg-ad872fdc4c5ca809.json  bg-b40f83681a6adbd2.json  bg-b9c3ef5e8988ebc7.json  bg-c57b3f4707c48e9b.json  bg-c78f8672fc254001.json  bg-c7be183e01cdb41c.json  (+11 more)
backgammon-llm-benchmark/render/: __init__.py  ascii.py  raster.py  svg.py
backgammon-llm-benchmark/render/images/: README.md
backgammon-llm-benchmark/results/: README.md
backgammon-llm-benchmark/rollouts/gnubg/: README.md  bg-043798701b2bc201.json  bg-06f2f715c60a3064.json  bg-095f362309a64c58.json  bg-0b631cbdc69540f4.json  bg-0d3cf1acba7e656d.json  bg-0e052ae06a7d00e2.json  (+44 more)
backgammon-llm-benchmark/runs/: example.json  example.yaml  pilot.json  pilot.yaml
backgammon-llm-benchmark/schema/: position.schema.json  results.schema.json  rollout.schema.json
backgammon-llm-benchmark/scripts/: build_dataset.py  build_human_benchmark.py  heldout.py  repair_cube_error_mp.py  run_benchmark.py  validate_pr.py  verify_position.py
backgammon-llm-benchmark/site/: README.md  build.py
backgammon-llm-benchmark/tests/: test_board.py  test_generate_build.py  test_generate_contamination.py  test_generate_dedup.py  test_generate_gnubg.py  test_generate_records.py  test_generate_sample.py  test_generate_selfplay.py  test_generate_tiering.py  test_harness_cache.py  test_harness_client.py  test_harness_cost.py  test_harness_parse.py  test_harness_prompts.py  test_harness_report.py  test_harness_runner.py  test_harness_scoring.py  test_heldout.py  test_human_benchmark.py  test_ids.py  test_moves.py  test_parse.py  test_quality.py  test_render.py  test_scoring.py  test_site_build.py
transformer-backgammon/: .gitignore  BEATING_XG.md  NEXT_STEPS.md  PERIODIC_REVIEW.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  TODO.md  agents.mli  board.mli  colab_tpu_training.ipynb  config.mli  cube.mli  debug_training.ipynb  encoder.mli  evaluation.mli  main.mli  network.mli  pyproject.toml  requirements-dev.txt  requirements.txt  training.mli  types.mli  variants.mli
transformer-backgammon/scripts/: build_bearoff_db.py  smoke_test.py  train_example.py  train_run.py  train_v6e.py
transformer-backgammon/tests/: __init__.py  conftest.py
(+73 files in other folders)
