[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backgammon-llm-benchmark"
version = "0.0.0"
description = "A contamination-resistant benchmark of LLM backgammon skill, scored against XG rollout ground truth (BenchPR)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "wesleyhowell7" }]
license = { text = "TBD — see PLAN.md §9" }

# The core domain layer (bgcore/ + ids/) is stdlib-only, so the base install has
# no runtime dependencies. Heavier features live in optional extras below.
dependencies = []

[project.optional-dependencies]
# LLM harness (PLAN.md §5.2): async OpenRouter client + validation.
harness = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]
# Board rendering (PLAN.md §1.2): board_json -> SVG -> PNG.
render = [
    "cairosvg>=2.7",
    "pillow>=10.0",
]
# JSON Schema validation of position/rollout/result records (PLAN.md §8 schema/).
schema = [
    "jsonschema>=4.21",
]
# Everything, for development.
dev = [
    "backgammon-llm-benchmark[harness,render,schema]",
    "pytest>=8.0",
]

[tool.setuptools]
# Only the importable code packages ship; data dirs are not packages.
packages = ["bgcore", "harness", "render", "ids", "generate"]
