[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-backgammon"
version = "0.1.0"
description = "GPU-optimized backgammon AI using transformer neural networks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["backgammon", "reinforcement-learning", "transformer", "neural-networks", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]>=0.4.26",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",  # parallel testing
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
]
train = [
    "wandb>=0.15.0",  # experiment tracking
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "transformer-backgammon[dev,train,tpu]",
]

[project.scripts]
backgammon = "backgammon.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/transformer-backgammon"
Repository = "https://github.com/yourusername/transformer-backgammon"
Documentation = "https://github.com/yourusername/transformer-backgammon/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=backgammon",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
ignore_missing_imports = true
